# 0xToxSec_slopcheck

./: .gitignore  LICENSE  README.md  install.ps1  install.sh  pyproject.toml
slopcheck/: __init__.py  __main__.py  cli.py  detect.py  parsers.py  registries.py
