[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slopcheck"
version = "0.1.0"
description = "Detect AI-hallucinated packages before you install them."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
]

[project.scripts]
slopcheck = "slopcheck.cli:main"

[project.urls]
Homepage = "https://github.com/0xToxSec/slopcheck"

[tool.setuptools.packages.find]
include = ["slopcheck*"]
