[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slopcheck"
version = "0.2.0"
description = "Detect AI-hallucinated packages before you install them."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["security", "supply-chain", "slopsquatting", "ai", "hallucination", "package-manager"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "requests>=2.28.0",
]

[project.scripts]
slopcheck = "slopcheck.cli:main"

[project.urls]
Homepage = "https://github.com/0xToxSec/slopcheck"
Repository = "https://github.com/0xToxSec/slopcheck"
Issues = "https://github.com/0xToxSec/slopcheck/issues"

[tool.setuptools.packages.find]
include = ["slopcheck*"]
